# injuslin

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  ProjectHome.md  README  TODO  aclocal.m4  autogen.sh  config.h  config.h.in  config.h.in~  config.status  configure  configure.in  init_chroot.sh
man/: Makefile.am  injuslin.1  injuslin.1.in
po/: ChangeLog  Makevars  POTFILES  POTFILES.in  injuslin.pot  zh_CN.gmo  zh_CN.po
src/: .gitignore  Makefile.am  auto_add_points.cpp  auto_add_points.h  bstream.cpp  bstream.h  common.cpp  common.h  conf.cpp  conf.h  configure_contest.cpp  configure_contest.h  cui.cpp  cui.h  filecmp.cpp  filecmp.h  gtk_addition.cpp  gtk_addition.h  judge_core.cpp  judge_core.h  main.cpp  start_judge.cpp  start_judge.h  structures.cpp  structures.h  view_results.cpp  view_results.h
