#This file is part of injuslin, informatcis judge system for linux.
#
#Copyright (C) <2008, 2009>  Jiakai <jia.kai66@gmail.com>
#
#Injuslin is free software: you can redistribute it and/or modify
#it under the terms of the GNU General Public License as published by
#the Free Software Foundation, either version 3 of the License, or
#(at your option) any later version.
#
#Injuslin is distributed in the hope that it will be useful,
#but WITHOUT ANY WARRANTY; without even the implied warranty of
#MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#GNU General Public License for more details.
#
#You should have received a copy of the GNU General Public License
#along with injuslin.  If not, see <http://www.gnu.org/licenses/>.

SUBDIRS = po src man

ACLOCAL_AMFLAGS = -I m4

EXTRA_DIST = config.rpath  config.rpath init_chroot.sh
